--- a/src/components/NewsList/NewsList.css
+++ b/src/components/NewsList/NewsList.css
@@ -19,7 +19,7 @@
 }
 .btn__pagination{
     margin: 5px;
-    padding: 10px;
+    padding: 8px;
     border: none;
     border-radius: 5px;
     background-color: #fff;
@@ -31,7 +31,12 @@
 font-weight: 700;
 
 }
-
+.btn__pagination.active{
+    border-radius: 10px;
+    background-color: #dfcece;
+    font-weight: 700;
+   
+}
 @media screen and (max-width: 1330px)  {
     html{
         font-size: 14px;
