--- a/src/components/NewsList/NewsList.css
+++ b/src/components/NewsList/NewsList.css
@@ -10,7 +10,6 @@
     grid-gap: 2em;
     justify-content: center;
     justify-items: center;
-    width: 100%;
     margin: 0 auto;
     padding: 2.5em;
 }
@@ -37,7 +36,7 @@ font-weight: 700;
     font-weight: 700;
    
 }
-@media screen and (max-width: 1330px)  {
+@media screen and (max-width: 1024px)  {
     html{
         font-size: 14px;
     }
@@ -45,8 +44,11 @@ font-weight: 700;
         grid-template-columns:  1fr 1fr;
     }
 }
-@media screen and (max-width: 900px)  {
-    .news-list__content{
-        grid-template-columns:  1fr;
+
+@media screen and (max-width: 580px) {
+    .news-list__content {
+       display: flex;
+       flex-direction: column;
+       width: 100%;
     }
 }
