--- a/src/components/Search/style.css
+++ b/src/components/Search/style.css
@@ -1,3 +1,6 @@
+.search__category__container{
+    display: flex;
+}
 .search__container{
     display: flex;
     flex-direction: column;
@@ -7,6 +10,10 @@
     flex-direction: column;
     padding: 20px 10px;
 }
+
+select:focus option {
+    color: rgb(80, 15, 15);
+  }
 .link__container{
     padding: 10px 0;
 }
