--- a/src/components/NewsList/NewsItem/style.css
+++ b/src/components/NewsList/NewsItem/style.css
@@ -9,8 +9,10 @@
     transition: all ease-in-out 0.3s;
     display: flex;
     flex-direction: column;
-
-    
+}
+.news-item.dark-theme{
+    background-color: grey;
+    color:#fff;
 }
 .news-item:hover{
     box-shadow: 0 0 40px rgba(0, 0, 0, .2);
