fix: change switch component and color style of page

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footer__container{
-    background-color: #0E1E32;
+    background-color: #5d4037;
     width: 100%;
-    color: #fff;
+    color: #efebe9;
 }
 .footer__box{
     gap: 30px;
